--- a/zx-mall-front/src/main/resources/jdbc.properties
+++ b/zx-mall-front/src/main/resources/jdbc.properties
@@ -1,5 +1,6 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://39.108.149.156:3306/mall?characterEncoding=utf8
+#jdbc.url=jdbc:mysql://39.108.149.156:3306/mall?characterEncoding=utf8
+jdbc.url=jdbc:mysql://10.194.80.68:3306/mall?characterEncoding=utf8
 jdbc.username=root
 jdbc.password=123456
 jdbc.initialSize=0
